fixed spacing of select and text area width, added hover with darker shade for submit button.

--- a/module06/styles.css
+++ b/module06/styles.css
@@ -27,6 +27,7 @@ input {
 }
 
 select {
+    width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #000000;
@@ -35,6 +36,7 @@ select {
 }
 
 textarea{
+    width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #000000;
@@ -86,6 +88,9 @@ button {
     color: white;
     font-size: medium;
     border: none;
+}
+button:hover {
+    background-color: #1a9e9e;
 }
 
 label{
